src/objects/Problem__c.object
<CustomObject>
    <fields>
        <fullName>Problem_w_Appeal_if_any__c</fullName>
        <label>Problem w/Appeal (if any)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency/Health Plan did not inform consumer of appeal rights</fullName>
                </value>
                <value>
                    <fullName>Agency/Health Plan provided unclear/incomplete notice of appeal rights</fullName>
                </value>
                <value>
                    <fullName>Agency/ health plan lost or never responded to appeal</fullName>
                </value>
                <value>
                    <fullName>Agency/health plan did not comply with timeliness for appeal</fullName>
                </value>
                <value>
                    <fullName>Health care provider unwilling to assist consumer with appeal process</fullName>
                </value>
                <value>
                    <fullName>Consumer lost at first level of appeal process</fullName>
                </value>
                <value>
                    <fullName>Consumer did not submit documentation in timely manner</fullName>
                </value>
                <value>
                    <fullName>No face to face hearing</fullName>
                </value>
                <value>
                    <fullName>Procedural problems</fullName>
                </value>
                <value>
                    <fullName>Other problem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Who_Caused__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ProviderType</fullName>
                </value>
                <value>
                    <fullName>Addiction medicine specialist/facility</fullName>
                </value>
                <value>
                    <fullName>All other suppliers, e.g., drug stores</fullName>
                </value>
                <value>
                    <fullName>Allergy/immunology</fullName>
                </value>
                <value>
                    <fullName>Ambulance service provider</fullName>
                </value>
                <value>
                    <fullName>Anesthesiology</fullName>
                </value>
                <value>
                    <fullName>Audiologist</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Certified nurse midwife</fullName>
                </value>
                <value>
                    <fullName>Chiropractic</fullName>
                </value>
                <value>
                    <fullName>Clinical laboratory (billing independently)</fullName>
                </value>
                <value>
                    <fullName>Colorectal surgery (formerly proctology)</fullName>
                </value>
                <value>
                    <fullName>Dentist/Oral Surgeon</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Diagnostic radiology</fullName>
                </value>
                <value>
                    <fullName>Emergency medicine specialist/group</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>General Practice/Family practice</fullName>
                </value>
                <value>
                    <fullName>General surgery</fullName>
                </value>
                <value>
                    <fullName>Geriatric medicine</fullName>
                </value>
                <value>
                    <fullName>Hematology</fullName>
                </value>
                <value>
                    <fullName>Home health agency</fullName>
                </value>
                <value>
                    <fullName>Hospice and palliative care</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Infectious disease</fullName>
                </value>
                <value>
                    <fullName>Intermediate care nursing facility</fullName>
                </value>
                <value>
                    <fullName>Internal medicine</fullName>
                </value>
                <value>
                    <fullName>Interventional pain management</fullName>
                </value>
                <value>
                    <fullName>Licensed clinical social worker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_To_Other__c</fullName>
        <label>Referred To - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <label>Referred To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regulatory_Agency__c</fullName>
        <label>Regulatory Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CDI</fullName>
                </value>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>County Mental Health</fullName>
                </value>
                <value>
                    <fullName>Covered California/Exchange</fullName>
                </value>
                <value>
                    <fullName>Dept. of Veteran’s Benefits</fullName>
                </value>
                <value>
                    <fullName>DHCS</fullName>
                </value>
                <value>
                    <fullName>DMHC</fullName>
                </value>
                <value>
                    <fullName>DOL</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>MRMIB</fullName>
                </value>
                <value>
                    <fullName>Office of Personnel Management</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Outcome_Detail__c</fullName>
        <label>Service Outcome - Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service authorized</fullName>
                </value>
                <value>
                    <fullName>Service scheduled</fullName>
                </value>
                <value>
                    <fullName>Billing problem resolved</fullName>
                </value>
                <value>
                    <fullName>Plan enrollment/disenrollment confirmed</fullName>
                </value>
                <value>
                    <fullName>Language Barrier Overcome</fullName>
                </value>
                <value>
                    <fullName>Disability Barrier Overcome</fullName>
                </value>
                <value>
                    <fullName>Other Discrm. Overcome</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Problem__c</fullName>
        <label>Service Problem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced health care directives</fullName>
                </value>
                <value>
                    <fullName>Affordability problems with services, including co-payments, deductibles, donut holes</fullName>
                </value>
                <value>
                    <fullName>Billing/charges, including out-of-network charges and problems with provider getting paid</fullName>
                </value>
                <value>
                    <fullName>Care is unavailable or inaccessible, including lack of network adequacy and delays in services</fullName>
                </value>
                <value>
                    <fullName>Client unaware how to use services</fullName>
                </value>
                <value>
                    <fullName>Confidentiality</fullName>
                </value>
                <value>
                    <fullName>Conservatorship</fullName>
                </value>
                <value>
                    <fullName>Continuity of care</fullName>
                </value>
                <value>
                    <fullName>Coordination of care</fullName>
                </value>
                <value>
                    <fullName>Claims coordination</fullName>
                </value>
                <value>
                    <fullName>Customer service problems (e.g., rudeness, slow or no reply)</fullName>
                </value>
                <value>
                    <fullName>Denial of services, referrals or appointments, including reductions in services</fullName>
                </value>
                <value>
                    <fullName>Discharge planning</fullName>
                </value>
                <value>
                    <fullName>Enrollment/disenrollment problems(plan or provider), including marketing/solicitation problems</fullName>
                </value>
                <value>
                    <fullName>Language, cultural or racial barrier</fullName>
                </value>
                <value>
                    <fullName>Physical disability accessibility problems</fullName>
                </value>
                <value>
                    <fullName>Quality/appropriateness of care, patient’s rights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Needed__c</fullName>
        <label>Services Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Advanced Health Care Directives</fullName>
                </value>
                <value>
                    <fullName>Alternative therapies</fullName>
                </value>
                <value>
                    <fullName>Ambulance/emergency transportation</fullName>
                </value>
                <value>
                    <fullName>Board and care</fullName>
                </value>
                <value>
                    <fullName>Case management</fullName>
                </value>
                <value>
                    <fullName>Check-up preventive visit for adult</fullName>
                </value>
                <value>
                    <fullName>Chiropractic</fullName>
                </value>
                <value>
                    <fullName>Dental/Orthodontic</fullName>
                </value>
                <value>
                    <fullName>Durable Medical Equipment (DME)</fullName>
                </value>
                <value>
                    <fullName>Emergency/urgent care</fullName>
                </value>
                <value>
                    <fullName>Experimental treatment</fullName>
                </value>
                <value>
                    <fullName>Home/community based care</fullName>
                </value>
                <value>
                    <fullName>Hospice/terminal care</fullName>
                </value>
                <value>
                    <fullName>Hospital care (not surgery)</fullName>
                </value>
                <value>
                    <fullName>Immunization</fullName>
                </value>
                <value>
                    <fullName>Independent Medical Review</fullName>
                </value>
                <value>
                    <fullName>LTC, institutional (SNF, etc.)</fullName>
                </value>
                <value>
                    <fullName>Maternity care (perinatal)</fullName>
                </value>
                <value>
                    <fullName>Medical records concern</fullName>
                </value>
                <value>
                    <fullName>Mental health care</fullName>
                </value>
                <value>
                    <fullName>Office visit (not check-up or well-child)</fullName>
                </value>
                <value>
                    <fullName>Out of area/non-network care</fullName>
                </value>
                <value>
                    <fullName>Prescription Drug</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Reproductive health (including contraceptives, STD prevention)</fullName>
                </value>
                <value>
                    <fullName>Second opinion</fullName>
                </value>
                <value>
                    <fullName>Specialty care</fullName>
                </value>
                <value>
                    <fullName>Substance abuse treatment</fullName>
                </value>
                <value>
                    <fullName>Supplies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_a_grievance_appeal_filed__c</fullName>
        <label>Was a grievance/appeal filed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_Caused__c</fullName>
        <label>Who Caused</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health plan</fullName>
                </value>
                <value>
                    <fullName>Medical group/IPA</fullName>
                </value>
                <value>
                    <fullName>Primary care provider (PCP)</fullName>
                </value>
                <value>
                    <fullName>Other health care provider</fullName>
                </value>
                <value>
                    <fullName>Enrollment Broker</fullName>
                </value>
                <value>
                    <fullName>COHS</fullName>
                </value>
                <value>
                    <fullName>County agency or official</fullName>
                </value>
                <value>
                    <fullName>State agency or official</fullName>
                </value>
                <value>
                    <fullName>Federal agency or official</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Don’t know</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_Filed_the_Appeal_Other__c</fullName>
        <label>Who Filed the Appeal - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_Filed_the_Appeal__c</fullName>
        <label>Who Filed the Appeal?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Problem</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Family_Member_Name__c</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Prob-{0000000}</displayFormat>
        <label>Problem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Problems</pluralLabel>
    <recordTypes>
        <fullName>Eligibility_Problem</fullName>
        <active>true</active>
        <label>Eligibility Problem</label>
    </recordTypes>
    <recordTypes>
        <fullName>MLP_Problem</fullName>
        <active>true</active>
        <label>MLP Problem</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Problem</fullName>
        <active>true</active>
        <label>Service Problem</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Amount_Owed_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Amount_Owed__c)
&amp;&amp;
OR(
   CONTAINS(Problem__c, &quot;Affordability problems&quot;),
   CONTAINS(Problem__c, &quot;Billing/charges&quot;)
)</errorConditionFormula>
        <errorDisplayField>Amount_Owed__c</errorDisplayField>
        <errorMessage>Required based on your Problem selection</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Appeal_Plan_required</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Plan__c , &quot;&quot;)
&amp;&amp;
OR(
   ISPICKVAL( Grievance_Against_Plan__c ,&quot;Yes&quot;),
   ISPICKVAL( Informal_Review_with_Plan__c ,&quot;Yes&quot;)
)</errorConditionFormula>
        <errorDisplayField>Plan__c</errorDisplayField>
        <errorMessage>Plan is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Health_Plan_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Managed_Care__c,&quot;Yes&quot;)
&amp;&amp;
ISPICKVAL( Health_Plan__c ,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Health_Plan__c</errorDisplayField>
        <errorMessage>When selecting &quot;Yes&quot; for Managed Care, you must provide a Health Plan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_problem_record_after_case_closure</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
NOT(ISNEW()), 
ISPICKVAL( Case__r.Status , &quot;Closed&quot;) 
)</errorConditionFormula>
        <errorMessage>You cannot update the problem record once the related case has been closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Prescription_Drug</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Services_Needed__c, &quot;Prescription Drug&quot;)
&amp;&amp;
ISPICKVAL( Prescription_Drug__c ,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Prescription_Drug__c</errorDisplayField>
        <errorMessage>Prescription Drug is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Prescription_Drug_Other</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Services_Needed__c, &quot;Prescription Drug&quot;)
&amp;&amp;
ISPICKVAL( Prescription_Drug__c ,&quot;Other&quot;)
&amp;&amp;
ISBLANK( Prescription_Drug_Other__c )</errorConditionFormula>
        <errorDisplayField>Prescription_Drug_Other__c</errorDisplayField>
        <errorMessage>You must specify the prescription drug when selecting &quot;Other&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Eligibility_Outcome_Details</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISPICKVAL(Outcome_Type__c, &quot;Eligibility&quot;)) 
&amp;&amp; 
NOT(ISPICKVAL( Eligibility_Outcome_Detail__c , &quot;&quot; ))</errorConditionFormula>
        <errorDisplayField>Eligibility_Outcome_Detail__c</errorDisplayField>
        <errorMessage>Only populate when Outcome Type is &quot;Eligibility&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Service_Outcome_Detail</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISPICKVAL(Outcome_Type__c, &quot;Services&quot;))
&amp;&amp;
NOT(ISPICKVAL( Service_Outcome_Detail__c, &quot;&quot; ))</errorConditionFormula>
        <errorDisplayField>Service_Outcome_Detail__c</errorDisplayField>
        <errorMessage>Only populate when Outcome Type is &quot;Services&quot;</errorMessage>
    </validationRules>
</CustomObject>